--- a/Public/index.html
+++ b/Public/index.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href="./assets/css/whocares.css">
     <title>WhoCares</title>
 </head>
 <body>
+    
+
     
 </body>
 </html>
