--- a/Public/index.html
+++ b/Public/index.html
@@ -6,9 +6,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="./assets/css/whocares.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css">
     <title>WhoCares</title>
 </head>
 <body>
+    <header>
+        <div class="d-flex">
+            <div class="col-4"><img src="../img/WhoCares_logo.png" alt=""></div>
+            <div class="col-4"><h2>{{$nev}}</h2></div>
+            <div class="col-4"><button class="btn btn-danger">
+                <i class="bi bi-box-arrow-right"></i></button></div>
+        </div>
+    </header>
+    <main class="d-flex">
+        <div class="col-3">
+            itt
+        </div>
+        <div class="col-6">
+            ott
+        </div>
+        <div class="col-3">
+            amott
+        </div>
+    </main>
+    <footer></footer>
+
+
     
 
     
