--- a/Public/index.html
+++ b/Public/index.html
@@ -11,21 +11,46 @@
 </head>
 <body>
     <header>
-        <div class="d-flex">
-            <div class="col-4"><img src="../img/WhoCares_logo.png" alt=""></div>
+        <div class="d-flex align-items-center" >
+            <div class="col-6"><img class="m-3" src="../img/WhoCares_logo.png" alt=""></div>
             <div class="col-4"><h2>{{$nev}}</h2></div>
-            <div class="col-4"><button class="btn btn-danger">
+            <div class="col-2 text-end"><button class="btn btn-danger m-3">
                 <i class="bi bi-box-arrow-right"></i></button></div>
         </div>
     </header>
     <main class="d-flex">
-        <div class="col-3">
-            itt
+        <div class="col-8">
+            <!-- postok helye-->
+            <div class="card" ng-repeat ="post in posts">
+                <div class="card-body">
+                  <h5 class="card-title">{{post.name}}</h5>
+                  <h6 class="card-subtitle mb-2 text-muted">{{post.date}}</h6>
+                  <p class="card-text"> {{post.postmessage}}</p>
+                  <button class="btn btn-primary"> Reakció </button>
+                  <button class="btn btn-primary"> Komment </button>
+                  <div class="accordion accordion-flush" id="accordionFlushExample">
+                    <div class="accordion-item ">
+                      <h2 class="accordion-header" id="flush-headingOne">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                          Accordion Item #1
+                        </button>
+                      </h2>
+                      <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample" ng-repeat="comment in comments">
+                          <div>
+                              {{comment.filename}}
+                          </div>
+                        <div>
+                            {{comment.message}}
+                        </div>
+                      </div>
+                    </div>
+                </div>
+                </div>
+              </div>
         </div>
-        <div class="col-6">
-            ott
-        </div>
-        <div class="col-3">
+        <div class="col-4">
+            <!-- Felhasznalok helye-->
+            
             amott
         </div>
     </main>
