--- a/Public/login.html
+++ b/Public/login.html
@@ -16,6 +16,6 @@
                 <label class="form-check-label" for="rememberme">Remember me</label>
             </div>
             <button type="submit" class="btn btn-primary mb-3">Login</button>
-            <a href="/reg" class="btn btn-secondary mb-3">Registration</a>
+            <a href="/Public/registration.html" class="btn btn-secondary mb-3">Registration</a>
         </form>
 </div>
