cica mica sql cica

--- a/Public/index.html
+++ b/Public/index.html
@@ -21,7 +21,7 @@
     <main class="d-flex">
         <div class="col-8">
             <!-- postok helye-->
-            <div ng-include="{{aktoldal}}"></div>
+            <div ng-include="'posts.html'"></div>
             <!--'posts.html'-->
         </div>
         <div class="col-4 embik">
