--- a/Public/index.html
+++ b/Public/index.html
@@ -42,7 +42,8 @@
 
     
 
-    
+    <div ng-include="'modal.html'"></div>
+
     <script src="./assets/js/jquery.min.js"></script>
     <script src="./assets/js/bootstrap.min.js"></script>
     <script src="./assets/js/angular.min.js"></script>
