--- a/Public/posts.html
+++ b/Public/posts.html
@@ -5,7 +5,7 @@
       <h6 class="card-subtitle mb-2 text-muted">{{post.date}}</h6>
       <p class="card-text"> {{post.postmessage}}</p>
       <button class="btn btn-{{emoticon.color}} rounded-circle mb-3" ng-repeat="emoticon in emoticons"><i class="{{emoticon.class}}"></i></button>
-      <button class="btn btn-primary" ng-click="Kommenteles()"> Komment </button>
+      <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop"> Komment </button>
       <div class="accordion accordion-flush" id="accordionFlushExample" ng-if="post.comments.length > 0">
         <div class="accordion-item ">
           <h2 class="accordion-header" id="flush-headingOne">
@@ -15,7 +15,7 @@
           </h2>
           <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample" ng-repeat="comment in post.comments">
               <div>
-                <img src="{{comment.filename}}" alt="Comment Profilkép">
+                <img class="rounded-circle" src="{{comment.filename}}" alt="Comment Profilkép">
                 <h6>{{comment.name}}</h6>
               </div>
             <div> 
