--- a/Public/modal.html
+++ b/Public/modal.html
@@ -2,11 +2,15 @@
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
-          <h1 class="modal-title fs-5" id="staticBackdropLabel">Modal title</h1>
+          <h1 class="modal-title fs-5" id="staticBackdropLabel">Hozzászólás írása</h1>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
-          ...
+          <h3>Írd ide a hozzászólásod:</h3>
+          <div class="input-group">
+            <span class="input-group-text"><img class="rounded-circle" src="{{loggedUser.filename}}" alt=""></span>
+            <textarea class="form-control" aria-label="With textarea"></textarea>
+          </div>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
