--- a/Public/users.html
+++ b/Public/users.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="hu" ng-app="hukerszApp">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/Public/assets/css/whocares.css">
     <link rel="stylesheet" href="/Public/assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/Public/assets/css/whocares.css">
     <title>WhoCares</title>
 </head>
-<body>
+<body ng-controller="userCtrl">
     
     <button ng-click="login()"> Belépés </button>
     <button ng-click="reg()"> Regisztráció </button>
