--- a/Public/index.html
+++ b/Public/index.html
@@ -15,13 +15,12 @@
             <div class="col-6" ><img class="m-3 w-50" src="../img/WhoCares_logo.png" alt=""></div>
             <div class="col-4"></div>
             <div class="col-2 text-end">
-                <button ng-if="loggedUser != null" class="btn btn-danger m-3"><i class="bi bi-box-arrow-right"></i></button></div>
+                <button onclick="logout()" class="btn btn-danger m-3"><i class="bi bi-box-arrow-right"></i></button></div>
         </div>
     </header>
+
+    <main class="container" ng-view> </main>
     
-    <main class="container" ng-view>
-       tartalom
-    </main>
     <div ng-include="'modal.html'"></div>
 
     <script src="./assets/js/jquery.min.js"></script>
