--- a/Public/modal.html
+++ b/Public/modal.html
@@ -13,8 +13,8 @@
           </div>
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-primary">Understood</button>
+          <button type="button" class="btn btn-secondary szurke" data-bs-dismiss="modal"> Bezár </button>
+          <button type="button" class="btn btn-primary kek" onclick="komment()">Komment</button>
         </div>
       </div>
     </div>
