--- a/Public/index.html
+++ b/Public/index.html
@@ -13,7 +13,7 @@
     <header>
         <div class="d-flex align-items-center" >
             <div class="col-6" ><img class="m-3 w-50" src="../img/WhoCares_logo.png" alt=""></div>
-            <div class="col-4"> </div>
+            <div class="col-4 logged"> {{loggedUser.name}}</div>
             <div class="col-2 text-end">
                 <button ng-click="logout()" class="btn btn-danger m-3"><i class="bi bi-box-arrow-right"  ></i></button></div>
         </div>
