chat (kivéve lekérdezés)

--- a/Public/index.html
+++ b/Public/index.html
@@ -35,6 +35,7 @@
     <!-- controllers -->
     <script src="./controllers/postsCtrl.js"></script>
     <script src="./controllers/userCtrl.js"></script>
+    <script src="./controllers/chatCtrl.js"></script>
     
 </body>
 </html>
